updated js file for event listeners

--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
 <body>
 	<header>
 		<div id="container">
-			<h1>Welcome to the 90's Hip Hop Artist Hang Man game!</h1>
+			<h1>Welcome to the Hip Hop Artist Hang Man game!</h1>
 		</div>
 	</header>
 	<div>
+	<h2>Select a category</h2>
+		<ul id="game-category">
+			<li id="90">90's Hip Hop</li>
+			<li id="2000">2000 Hip Hop</li>
+		</ul>
 		<h2>Select a game mode</h2>
 		<ul id="game-mode">
 			<li id="easy">Easy</li>
