--- a/index.html
+++ b/index.html
@@ -4,34 +4,75 @@
 	<title>Hangman Game</title>
 	<meta charset="utf-8">
 	<!-- Bootstrap 4 -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<script type="text/javascript" src="assets/javascript/hangman.js" async></script>
 	<script type="text/javascript" src="assets/javascript/game.js" async></script>
 </head>
 <body>
-	<header>
-		<div id="container">
-			<h1>Welcome to the Hip Hop Artist Hang Man game!</h1>
+	<header class="page-header">
+		<div class="jumbotron">
+			<h1 class="h1">Welcome to the Hip Hop Artist Hang Man game!</h1>
 		</div>
 	</header>
-	<div>
-	<h2>Select a category</h2>
-		<ul id="game-category">
-			<li id="90">90's Hip Hop</li>
-			<li id="2000">2000 Hip Hop</li>
-		</ul>
-		<h2>Select a game mode</h2>
-		<ul id="game-mode">
-			<li id="easy">Easy</li>
-			<li id="medium">Medium</li>
-			<li id="hard">Hard</li>
-		</ul>
-		<h3>Start Game!</h3>
-		<button id="start-game">Click to play!</button>
-		<ul id="hangman-ul">
-			
-		</ul>
+	<div class="container">
+		<div class="row">
+			<div id="mode-selector" class="col-md-12">
+				<div id="game-mode">
+					<h3>Pick a game mode</h3>
+					<div class="btn-group" role="group">
+			  		<button id="easy" type="button" class="btn btn-default">Easy</button>
+			  		<button id="medium" type="button" class="btn btn-default">Medium</button>
+			  		<button id="hard" type="button" class="btn btn-default">Hard</button>
+					</div>	
+				</div>
+				<div id="game-category">
+					<h3>Pick a category</h3>
+					<div id="game-category" class="btn-group" role="group">
+			  		<button id="90" type="button" class="btn btn-default">90's Hip Hop</button>
+			  		<button id="2000" type="button" class="btn btn-default">2000 Hip Hop</button>
+					</div>
+				</div>
+				<div id="start-game">
+					<h3>Start Game!</h3>
+					<button id="start-game">Click to play!</button>	
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div id="images" class="col-md-6">
+				<div class="row">
+					<div class="col-md-12">
+						<img class="col-md-12 img-responsive" src="assets/images/Back to 90s.jpg" alt="Image could not be displayed.">
+					</div>	
+				</div>
+				<div class="row">
+					<div id="artist-name">
+					</div>
+				</div>
+			</div>
+			<div id="game-stats" class="col-md-6 flex-column">
+				<div>
+					<span>Press the Start button to get started!</span>
+				</div>
+				<div class="flex-column">
+					<h4>Wins</h4>
+					<h3 id="wins"></h3>
+				</div>
+				<div class="flex-column">
+					<h4>Number of guesses remaining</h4>
+					<h3 id="guesses"></h3>
+				</div>
+				<div class="flex-column">
+					<h4>Letters already guessed</h4>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div id="hangman-container" class="col-md-12 flex-column">
+				<ul id="hangman-ul" class="list-inline dl-horizontal"></ul>	
+			</div>
+		</div>
 	</div>
 </body>
 </html>
