updated the ui more to reflect full functionality as described in spec

--- a/index.html
+++ b/index.html
@@ -56,15 +56,16 @@
 					<span>Press the Start button to get started!</span>
 				</div>
 				<div class="flex-column">
-					<h4>Wins</h4>
-					<h3 id="wins"></h3>
+					<h3>Wins</h4>
+					<h4 id="wins"></h3>
 				</div>
 				<div class="flex-column">
-					<h4>Number of guesses remaining</h4>
-					<h3 id="guesses"></h3>
+					<h3>Number of guesses remaining</h4>
+					<h4 id="guesses"></h3>
 				</div>
 				<div class="flex-column">
 					<h4>Letters already guessed</h4>
+					<h3 id="already-guessed"></h3>
 				</div>
 			</div>
 		</div>
