--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<div id="images" class="col-md-6">
 				<div class="row">
 					<div class="col-md-12">
-						<img class="col-md-12 img-responsive" src="assets/images/Back to 90s.jpg" alt="Image could not be displayed.">
+						<img id="artist-img" class="col-md-12 img-responsive" src="assets/images/HipHopClassics.jpg" alt="Image could not be displayed.">
 					</div>	
 				</div>
 				<div class="row">
