--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</header>
 	<div class="container">
 		<div class="row">
-			<div id="mode-selector" class="col-md-12">
+			<div id="mode-selector" class="col-md-12 flex-column">
 				<div id="game-mode">
 					<h3>Pick a game mode</h3>
 					<div class="btn-group" role="group">
@@ -26,16 +26,16 @@
 			  		<button id="hard" type="button" class="btn btn-default">Hard</button>
 					</div>	
 				</div>
-				<div id="game-category">
+				<div id="game-category" class="flex-column">
 					<h3>Pick a category</h3>
 					<div id="game-category" class="btn-group" role="group">
 			  		<button id="90" type="button" class="btn btn-default">90's Hip Hop</button>
 			  		<button id="2000" type="button" class="btn btn-default">2000 Hip Hop</button>
 					</div>
 				</div>
-				<div id="start-game">
+				<div id="start-game" class="flex-column">
 					<h3>Start Game!</h3>
-					<button id="start-game">Click to play!</button>	
+					<button id="start-game" class="btn btn-primary btn-lg">Click to play!</button>	
 				</div>
 			</div>
 		</div>
@@ -56,16 +56,16 @@
 					<span>Press the Start button to get started!</span>
 				</div>
 				<div class="flex-column">
-					<h3>Wins</h4>
-					<h4 id="wins"></h3>
+					<h3 class="h3">Wins</h4>
+					<h4 id="wins" class="h4"></h3>
 				</div>
 				<div class="flex-column">
-					<h3>Number of guesses remaining</h4>
-					<h4 id="guesses"></h3>
+					<h3 class="h3">Number of guesses remaining</h4>
+					<h4 id="guesses" class="h4"></h3>
 				</div>
 				<div class="flex-column">
-					<h4>Letters already guessed</h4>
-					<h3 id="already-guessed"></h3>
+					<h4 class="h4">Letters already guessed</h4>
+					<h3 id="already-guessed" class="h3"></h3>
 				</div>
 			</div>
 		</div>
