created working demo of audio playing and images swapping out

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<header class="page-header">
 		<div class="jumbotron">
-			<h1 class="h1">Welcome to the Hip Hop Artist Hang Man game!</h1>
+			<h1 class="h1">Hip Hop Artist Hang Man game!</h1>
 		</div>
 	</header>
 	<div class="container">
@@ -73,6 +73,9 @@
 			<div id="hangman-container" class="col-md-12 flex-column">
 				<ul id="hangman-ul" class="list-inline dl-horizontal"></ul>	
 			</div>
+			<audio id="song-player" loop="loop" autoplay="autoplay" controls="controls">   
+			   <source src="assets/audio/new edition.mp3" />  
+			</audio>
 		</div>
 	</div>
 </body>
