--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="row">
 			<div id="mode-selector" class="col-md-12 flex-column">
 				<div id="game-mode">
-					<h3>Pick a game mode</h3>
+					<h3 class="h3">Pick a game mode</h3>
 					<div class="btn-group" role="group">
 			  		<button id="easy" type="button" class="btn btn-default">Easy</button>
 			  		<button id="medium" type="button" class="btn btn-default">Medium</button>
@@ -27,28 +27,28 @@
 					</div>	
 				</div>
 				<div id="game-category" class="flex-column">
-					<h3>Pick a category</h3>
+					<h3 class="h3">Pick a category</h3>
 					<div id="game-category" class="btn-group" role="group">
 			  		<button id="90" type="button" class="btn btn-default">90's Hip Hop</button>
 			  		<button id="2000" type="button" class="btn btn-default">2000 Hip Hop</button>
 					</div>
 				</div>
-				<div id="start-game" class="flex-column">
-					<h3>Start Game!</h3>
+				<div class="flex-column">
+					<h3 class="h3">Start Game!</h3>
 					<button id="start-game" class="btn btn-primary btn-lg">Click to play!</button>	
 				</div>
 			</div>
 		</div>
 		<div class="row">
+			<div id="artist-name" class="flex-column">
+			</div>
+		</div>
+		<div class="row">
 			<div id="images" class="col-md-6">
 				<div class="row">
-					<div class="col-md-12">
+					<div id="img-container" class="col-md-12">
 						<img id="artist-img" class="col-md-12 img-responsive" src="assets/images/HipHopClassics.jpg" alt="Image could not be displayed.">
 					</div>	
-				</div>
-				<div class="row">
-					<div id="artist-name">
-					</div>
 				</div>
 			</div>
 			<div id="game-stats" class="col-md-6 flex-column">
@@ -58,6 +58,10 @@
 				<div class="flex-column">
 					<h3 class="h3">Wins</h4>
 					<h4 id="wins" class="h4"></h3>
+				</div>
+				<div id="hangman-container" class="col-md-12 flex-column">
+					<h3 class="h3">Current Artist Name</h3>
+					<ul id="hangman-ul" class="list-inline dl-horizontal"></ul>	
 				</div>
 				<div class="flex-column">
 					<h3 class="h3">Number of guesses remaining</h4>
@@ -70,9 +74,6 @@
 			</div>
 		</div>
 		<div class="row">
-			<div id="hangman-container" class="col-md-12 flex-column">
-				<ul id="hangman-ul" class="list-inline dl-horizontal"></ul>	
-			</div>
 			<audio id="song-player" loop="loop" autoplay="autoplay" controls="controls">   
 			   <source src="assets/audio/new edition.mp3" />  
 			</audio>
