moved some things around added song name to layout

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
 			</div>
 		</div>
 		<div class="row">
-			<div id="artist-name" class="flex-column">
-			</div>
+			<div id="artist-name" class="flex-column"></div>
+		</div>
+		<div class="row">
+			<div id="song-name" class="flex-column"></div>
 		</div>
 		<div class="row">
 			<div id="images" class="col-md-6">
