--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Hangman Game</title>
 	<meta charset="utf-8">
-	<!-- Bootstrap 4 -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<script type="text/javascript" src="assets/javascript/hangman.js" async></script>
 	<script type="text/javascript" src="assets/javascript/game.js" async></script>
@@ -18,8 +18,8 @@
 	<div class="container">
 		<div class="row">
 			<div id="mode-selector" class="col-md-12 flex-column">
-				<div id="game-mode">
-					<h3 class="h3">Pick a game mode</h3>
+				<div id="game-mode" class="flex-column">
+					<h3 class="h3">Choose a difficulty</h3>
 					<div class="btn-group" role="group">
 			  		<button id="easy" type="button" class="btn btn-default">Easy</button>
 			  		<button id="medium" type="button" class="btn btn-default">Medium</button>
@@ -27,7 +27,7 @@
 					</div>	
 				</div>
 				<div id="game-category" class="flex-column">
-					<h3 class="h3">Pick a category</h3>
+					<h3 class="h3">Pick an era</h3>
 					<div id="game-category" class="btn-group" role="group">
 			  		<button id="90" type="button" class="btn btn-default">90's Hip Hop</button>
 			  		<button id="2000" type="button" class="btn btn-default">2000 Hip Hop</button>
@@ -51,7 +51,7 @@
 					<div class="row">
 						<div id="img-container" class="col-md-12">
 							<img id="artist-img" class="col-md-12 img-responsive" src="assets/images/HipHopClassics.jpg" alt="Image could not be displayed.">
-							<audio id="song-player" loop="loop" autoplay="autoplay" controls="controls">   
+							<audio id="song-player" loop="loop" autoplay="autoplay">   
 				   			<source src="assets/audio/new edition.mp3" />  
 							</audio>
 						</div>	
@@ -59,7 +59,7 @@
 				</div>
 				<div id="game-stats" class="col-md-6 flex-column">
 					<div>
-						<span>Press the Start button to get started!</span>
+						<h4>Press the Start button to get started!</h4>
 					</div>
 					<div class="flex-column">
 						<h3 class="h3">Wins</h4>
