moved some things around and timing

--- a/index.html
+++ b/index.html
@@ -40,12 +40,7 @@
 			</div>
 		</div>
 		<div id="main-content">
-			<div class="row">
-				<div id="artist-name" class="flex-column"></div>
-			</div>
-			<div class="row">
-				<div id="song-name" class="flex-column"></div>
-			</div>
+		<div id="game-over"></div>
 			<div class="row">
 				<div id="images" class="col-lg-6">
 					<div class="row">
@@ -61,6 +56,12 @@
 					<div class="row">
 						<div class="flex-column">
 							<h4>Press the Start button to get started!</h4>
+						</div>
+						<div class="row">
+							<div id="artist-name" class="flex-column"></div>
+						</div>
+						<div class="row">
+							<div id="song-name" class="flex-column"></div>
 						</div>
 						<div class="flex-column">
 							<h3 class="h3">Wins</h4>
